# guess.rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  dev.sh  server-setup.sh
.github/workflows/: deploy.yml
migrations/: 20250920223147_create_users_table.sql  20250923220741_create_country_table.sql  20251003184651_create_breakouts.sql  20251003212636_create_users.sql
public/: htmx-ext-sse@2.2.2.min.js  htmx-ext-ws@2.0.2.min.js  manifest.json  service-worker.js
public/scripts/: app-drawer.js  modal.js  name-swap.js  sse-listener.js  toggle-card.js  ws-listener.js
public/seo/: robots.txt  sitemap.xml
public/styles/: main.css  secondary.css
src/: lib.rs  main.rs
src/application/: breakout_service.rs  country_service.rs  mod.rs  user_service.rs
src/domain/: breakout.rs  breakout_channel.rs  country.rs  mod.rs  rbac.rs  user.rs
src/extract/: admin_user.rs  breakout.rs  breakout_user.rs  current_user.rs  maybe_current_user.rs  mod.rs  no_user.rs  real_ip.rs
src/filter/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/audit/: geolocation.rs
src/infrastructure/auth/: google.rs  mod.rs
src/infrastructure/db/: breakout_repository.rs  country_repository.rs  mod.rs  user_repository.rs
src/infrastructure/jwt/: mod.rs  user_claims.rs
src/infrastructure/payment/: stripe.rs
src/routes/: admin.rs  auth.rs  breakout.rs  homepage.rs  mod.rs  payments.rs  webhooks.rs
src/util/: htmx.rs  mod.rs  pagination.rs  rbac.rs  validation.rs
templates/: breakout.html  breakout_voters.html  dashboard.html  homepage.html  update_user.html
templates/_partials/: app_drawer.html  footer.html  meta.html  modal.html  navbar.html  scripts.html
templates/admin/: countries.html  users.html  view_user.html
