[package]
name = "crust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
askama = "0.14.0"
askama_web = { version = "0.14.6", features = ["axum-0.8"] }
async-stripe = { version = "0.41.0", features = ["runtime-tokio-hyper"] }
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["cookie", "form", "query"] }
chrono = { version = "0.4.42", features = ["clock"] }
dotenv = "0.15.0"
ip2location = "0.6.0"
jsonwebtoken = "9.3.1"
log = "0.4.28"
oauth2 = "5.0.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.226"
serde_json = "1.0.145"
simple_logger = "5.0.0"
sqlx = { version = "0.8.6", features = [
  "chrono",
  "runtime-tokio-native-tls",
  "sqlite",
] }
stripe-webhooks = "0.1.1"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = [
  "compression-full",
  "fs",
  "set-header",
] }
